--- a/config/example_cam_config.yaml
+++ b/config/example_cam_config.yaml
@@ -3,10 +3,10 @@
 ####################
 
 # directory to save images (make sure that directory exists and that it is an absolute path).
-image_directory: "/home/dev/"  # must be absolute path, not relative path (i.e. '~')
+image_directory: "/home/nick/dev/"  # must be absolute path, not relative path (i.e. '~')
 
 # save images to the disk
-save_disk: false 
+save_disk: false
 
 # save images on trigger (calibration only)
 calib_mode: false
