--- a/config/3DMapping_cam_config.yaml
+++ b/config/3DMapping_cam_config.yaml
@@ -25,19 +25,19 @@ format: "XI_RGB24"
 
 # triggering (0 - none, 1 - software trigger (NOT IMPLMENTED YET),
 # 2 - hardware trigger)
-cam_trigger_mode: 0
+cam_trigger_mode: 2
 hw_trigger_edge: 0            # if hw trigger, 0/1 = rising/falling edge trigger
 
 # for camera frame rate
 frame_rate_control: true      # enable or disable frame rate control
                               # (works if no triggering is enabled)
-frame_rate_set: 10            # for trigger mode, fps limiter (0 for none)
+frame_rate_set: 1            # for trigger mode, fps limiter (0 for none)
 img_capture_timeout: 1000     # timeout in milliseconds for xiGetImage()
 
 # exposure settings
-auto_exposure: true          # auto exposure on or off
-exposure_time: 1000           # manual exposure time in microseconds
-manual_gain: 9                # manual exposure gain
+auto_exposure: false          # auto exposure on or off
+exposure_time: 20000           # manual exposure time in microseconds
+manual_gain: 0.5                # manual exposure gain
 auto_exposure_priority: 0.8   # auto exposure to gain ratio (1 = use only exposure)
 auto_time_limit: 30000        # auto exposure time limit in microseconds
 auto_gain_limit: 2.0          # auto exposure gain limit
